force-app/main/default/objects/Account/fields/Account_Manager_ID_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager_ID_Name__c</fullName>
    <description>Used for People Soft Account Creation</description>
    <inlineHelpText>ATG Delivery Assurance (i.e. 557246 / John Smith)</inlineHelpText>
    <label>Account Manager ID / Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Jim Buller / 794698</fullName>
                <default>true</default>
                <label>Jim Buller / 794698</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>