force-app/main/default/objects/Account/fields/Account_Source__c.field-meta.xml
<CustomField>
    <fullName>Account_Source__c</fullName>
    <label>Account Source</label>
    <length>35</length>
    <type>Text</type>
</CustomField>