force-app/main/default/objects/Account/fields/Active_Partner__c.field-meta.xml
<CustomField>
    <fullName>Active_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Delineates if a Partner Account is still active.</description>
    <inlineHelpText>Delineates if a Partner Account is still active.</inlineHelpText>
    <label>Active Partner</label>
    <type>Checkbox</type>
</CustomField>