force-app/main/default/objects/Account/fields/Advisory_Account__c.field-meta.xml
<CustomField>
    <fullName>Advisory_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to indicate a field is advisory.</description>
    <inlineHelpText>Managed by the Advisory Team</inlineHelpText>
    <label>Advisory Account</label>
    <type>Checkbox</type>
</CustomField>