force-app/main/default/objects/Account/fields/Alliance_Owner__c.field-meta.xml
<CustomField>
    <fullName>Alliance_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to be used by alliances to delineate who is the Alliance Owner of an Account</description>
    <inlineHelpText>Lookup for User records.</inlineHelpText>
    <label>Alliance Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>