force-app/main/default/objects/Account/fields/ATG_VP_Delivery__c.field-meta.xml
<CustomField>
    <fullName>ATG_VP_Delivery__c</fullName>
    <description>The Senior ATG Delivery person responsible for and assigned to account.</description>
    <label>ATG VP Delivery</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Jim Buller</fullName>
            </value>
            <value>
                <fullName>Steven Burry</fullName>
            </value>
            <value>
                <fullName>Ted Brookbank</fullName>
            </value>
            <value>
                <fullName>Tom Stergios</fullName>
            </value>
            <value>
                <fullName>Priya Marsonia</fullName>
            </value>
            <value>
                <fullName>Steve Raye</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>