force-app/main/default/objects/Account/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <description>Business Unit for PeopleSoft Account Creation</description>
    <inlineHelpText>do not change</inlineHelpText>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ATG</fullName>
                <default>true</default>
                <label>ATG</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>