force-app/main/default/objects/Account/fields/Client_Partner_ID_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Partner_ID_Name__c</fullName>
    <description>Used for People Soft Account creation</description>
    <inlineHelpText>ATG Sales Contact (i.e. 557246 / John Smith)</inlineHelpText>
    <label>Client Partner ID/Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ted Brookbank / 794461</fullName>
                <default>true</default>
                <label>Ted Brookbank / 794461</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>