force-app/main/default/objects/Account/fields/Client_Partner_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Partner_Name__c</fullName>
    <description>Name of client partner tied to this account. Data transferred from WinZone. Created as part of winzone integration on 3.13.22</description>
    <inlineHelpText>Name of client partner tied to this account. Data transferred from WinZone</inlineHelpText>
    <label>Client Partner Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>