force-app/main/default/objects/Account/fields/Client_Sentiment_Xactly__c.field-meta.xml
<CustomField>
    <fullName>Client_Sentiment_Xactly__c</fullName>
    <description>created for capturing xactly account information</description>
    <label>Client Sentiment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>