force-app/main/default/objects/Account/fields/CodeZero_Legacy_Record__c.field-meta.xml
<CustomField>
    <fullName>CodeZero_Legacy_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, this field denotes that this record was legacy CodeZero data that was merged into ATG&apos;s Salesforce through the Org Merge Process. If unchecked, this notes the field is ATG legacy data.</description>
    <inlineHelpText>If checked, this field denotes that this record was legacy CodeZero data that was merged into ATG&apos;s Salesforce through the Org Merge Process. If unchecked, this notes the field is ATG legacy data.</inlineHelpText>
    <label>CodeZero Legacy Record</label>
    <type>Checkbox</type>
</CustomField>