force-app/main/default/objects/Account/fields/Cognizant_BU__c.field-meta.xml
<CustomField>
    <fullName>Cognizant_BU__c</fullName>
    <description>Field to capture the Cognizant Business unit this Account was created in. Field populated by data transfer via WinZone Integration. From 3.12.22 onward, We will have accounts in ATG Salesforce that are not owned by the ATG Business unit within Cognizant. These accounts will be created in our  system only if there are ATG services being sold to that client as part of work conducted by this identified Business Unit.</description>
    <inlineHelpText>Field to capture the Cognizant Business unit this Account was created in. Field populated by data transfer via WinZone Integration.</inlineHelpText>
    <label>Cognizant BU</label>
    <length>50</length>
    <type>Text</type>
</CustomField>