force-app/main/default/objects/Account/fields/Connect_Delta_XactlyIntegration__c.field-meta.xml
<CustomField>
    <fullName>Connect_Delta_XactlyIntegration__c</fullName>
    <label>Connect / Delta</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Connect</fullName>
            </value>
            <value>
                <fullName>Delta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>