force-app/main/default/objects/Account/fields/Connect_Integration__c.field-meta.xml
<CustomField>
    <fullName>Connect_Integration__c</fullName>
    <label>Connect Integration</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Incent</fullName>
            </value>
            <value>
                <fullName>SFTP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>