force-app/main/default/objects/Account/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <description>Field to determine which type of contracts have established with partners. Used on ATG Partner Account Page Layout</description>
    <inlineHelpText>Field to determine which type of contracts we have established with partners.</inlineHelpText>
    <label>Contract Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Sub-Contract</fullName>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>QLA</fullName>
            </value>
            <value>
                <fullName>All entities</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>NDA</fullName>
                <isActive>false</isActive>
                <label>NDA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>