force-app/main/default/objects/Account/fields/Current_Year_Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_Total_Revenue__c</fullName>
    <description>Used for reporting to calculate the total revenue for each account where we sold business in a given year</description>
    <label>Current Year Total Revenue</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.CloseDate</field>
        <operation>greaterThan</operation>
        <value>1/1/2022</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>contains</operation>
        <value>Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>