force-app/main/default/objects/Account/fields/Customer_Contact_Department__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact_Department__c</fullName>
    <inlineHelpText>Select the department in which this contact sits in their organization</inlineHelpText>
    <label>Customer Contact Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CEO Office</fullName>
            </value>
            <value>
                <fullName>CIO Organization / Information Technology</fullName>
            </value>
            <value>
                <fullName>Commericial</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Corporate Security</fullName>
            </value>
            <value>
                <fullName>Distribution</fullName>
            </value>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Human Resources</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Product Engineering</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
            <value>
                <fullName>Research and Development</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Sourcing and Procurement</fullName>
            </value>
            <value>
                <fullName>Supply Chain &amp; Logistics</fullName>
            </value>
            <value>
                <fullName>Vendor Management</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>