force-app/main/default/objects/Account/fields/Customer_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact_Email__c</fullName>
    <description>Email for contact on customer account for PeopleSoft account creation</description>
    <inlineHelpText>e.g. name@company.com</inlineHelpText>
    <label>Customer Contact Email</label>
    <type>Email</type>
</CustomField>