force-app/main/default/objects/Account/fields/Customer_Contact_Level__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact_Level__c</fullName>
    <inlineHelpText>Select the level of which the Contact sits in their organization</inlineHelpText>
    <label>Customer Contact Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CEO</fullName>
            </value>
            <value>
                <fullName>CFO / Senior Finance Executive</fullName>
            </value>
            <value>
                <fullName>Chariman or President</fullName>
            </value>
            <value>
                <fullName>CIO</fullName>
            </value>
            <value>
                <fullName>CISO</fullName>
            </value>
            <value>
                <fullName>CMO</fullName>
            </value>
            <value>
                <fullName>COO</fullName>
            </value>
            <value>
                <fullName>CTO / Senior Tech Executive</fullName>
            </value>
            <value>
                <fullName>EVP / SVP</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>