force-app/main/default/objects/Account/fields/Customer_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact_Name__c</fullName>
    <description>Contact name of customer account for PeopleSoft Account creation</description>
    <inlineHelpText>e.g. Jane Smith</inlineHelpText>
    <label>Customer Contact Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>