force-app/main/default/objects/Account/fields/Customer_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact_Phone__c</fullName>
    <description>Phone number of contact on customer account for PeopleSoft Account Creation</description>
    <label>Customer Contact Phone</label>
    <type>Phone</type>
</CustomField>