force-app/main/default/objects/Account/fields/Customer_Contact_Title_Designation__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact_Title_Designation__c</fullName>
    <description>Title/designation of the contact on the customer account for PeopleSoft Account creation</description>
    <inlineHelpText>e.g. VP, Procurement</inlineHelpText>
    <label>Customer Contact Title/Designation</label>
    <length>50</length>
    <type>Text</type>
</CustomField>