force-app/main/default/objects/Account/fields/CZ_AccountId__c.field-meta.xml
<CustomField>
    <fullName>CZ_AccountId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>CZ_AccountId</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>