force-app/main/default/objects/Account/fields/Data_Load_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Data_Load_Frequency__c</fullName>
    <label>Data Load Frequency</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>QTD</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
            <value>
                <fullName>YTD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>