force-app/main/default/objects/Account/fields/Data_Source__c.field-meta.xml
<CustomField>
    <fullName>Data_Source__c</fullName>
    <label>Data Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SFDC</fullName>
            </value>
            <value>
                <fullName>SW3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>