force-app/main/default/objects/Account/fields/Delivery_Owned__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Owned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to capture whether this account is owned by the delivery team.</description>
    <inlineHelpText>Checkbox to capture whether this account is owned by the delivery team.</inlineHelpText>
    <label>Delivery Owned</label>
    <type>Checkbox</type>
</CustomField>