force-app/main/default/objects/Account/fields/Delivery_Percentage_Owned__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Percentage_Owned__c</fullName>
    <inlineHelpText>The portion of Revenue from this account that will be allocated to the Delivery team</inlineHelpText>
    <label>Delivery Percentage Owned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>