force-app/main/default/objects/Account/fields/Delivery_VP__c.field-meta.xml
<CustomField>
    <fullName>Delivery_VP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery VP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>