force-app/main/default/objects/Account/fields/Ecosystem_Count__c.field-meta.xml
<CustomField>
    <fullName>Ecosystem_Count__c</fullName>
    <description>Counts the number of ecosystem records associated with this account. Used for automatically generating ecosystem records.</description>
    <inlineHelpText>Counts the number of ecosystem records associated with this account. Used for automatically generating ecosystem records.</inlineHelpText>
    <label>Ecosystem Count</label>
    <summaryForeignKey>Ecosystem__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>