force-app/main/default/objects/Account/fields/Entity_for_Raising_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Entity_for_Raising_Invoice__c</fullName>
    <inlineHelpText>Select from list</inlineHelpText>
    <label>Entity for Raising Invoice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ATG</fullName>
                <default>true</default>
                <label>ATG</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>