force-app/main/default/objects/Account/fields/ExternalID__c.field-meta.xml
<CustomField>
    <fullName>ExternalID__c</fullName>
    <description>External ID for use in migration.</description>
    <externalId>true</externalId>
    <label>ExternalID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>