force-app/main/default/objects/Account/fields/First_Opportunity_Closed_Won_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Opportunity_Closed_Won_Date__c</fullName>
    <inlineHelpText>This field indicates the date that an Opportunity associated with this account reached &quot;Closed Won&quot; stage first.</inlineHelpText>
    <label>First Opportunity Closed Won Date</label>
    <summarizedField>Opportunity.CloseDate</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>contains</operation>
        <value>Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>