force-app/main/default/objects/Account/fields/Global_Market__c.field-meta.xml
<CustomField>
    <fullName>Global_Market__c</fullName>
    <description>Global Market for customer account for PeopleSoft Account creation</description>
    <inlineHelpText>do not change</inlineHelpText>
    <label>Global Market</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>M&amp;A</fullName>
                <default>true</default>
                <label>M&amp;A</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>