force-app/main/default/objects/Account/fields/Held_Comissions__c.field-meta.xml
<CustomField>
    <fullName>Held_Comissions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Held Comissions</label>
    <type>Checkbox</type>
</CustomField>