force-app/main/default/objects/Account/fields/Inbound_Integration_2_Xactly__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Integration_2_Xactly__c</fullName>
    <label>Inbound Integration #2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inbound HR</fullName>
            </value>
            <value>
                <fullName>Inbound Upload Orders</fullName>
            </value>
            <value>
                <fullName>Inbound Quotas</fullName>
            </value>
            <value>
                <fullName>Inbound Currency</fullName>
            </value>
            <value>
                <fullName>Inbound Trigger</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>