force-app/main/default/objects/Account/fields/Incent_Connection__c.field-meta.xml
<CustomField>
    <fullName>Incent_Connection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Incent Connection?</label>
    <type>Checkbox</type>
</CustomField>