force-app/main/default/objects/Account/fields/Instance_Location__c.field-meta.xml
<CustomField>
    <fullName>Instance_Location__c</fullName>
    <label>Instance Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>North America</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>