force-app/main/default/objects/Account/fields/KimbleOne__BillingContact__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__BillingContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Billing Contact)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>