force-app/main/default/objects/Account/fields/KimbleOne__BillingParentAccount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__BillingParentAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Parent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Billing Accounts</relationshipLabel>
    <relationshipName>AccountsBilling</relationshipName>
    <type>Lookup</type>
</CustomField>