force-app/main/default/objects/Account/fields/KimbleOne__BusinessUnitTradingEntity__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__BusinessUnitTradingEntity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Business Unit (Trading)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__BusinessUnit__c.KimbleOne__IsTradingEntity__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__BusinessUnit__c</referenceTo>
    <relationshipLabel>Accounts (Trading Entity)</relationshipLabel>
    <relationshipName>AccountsBusinessUnitTradingEntity</relationshipName>
    <type>Lookup</type>
</CustomField>