force-app/main/default/objects/Account/fields/KimbleOne__IsCustomer__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsCustomer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Customer</label>
    <type>Checkbox</type>
</CustomField>