force-app/main/default/objects/Account/fields/KimbleOne__IsSupplier__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsSupplier__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Supplier</label>
    <type>Checkbox</type>
</CustomField>