force-app/main/default/objects/Account/fields/KimbleOne__TimePattern__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TimePattern__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Time Pattern</label>
    <referenceTo>KimbleOne__TimePattern__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>