force-app/main/default/objects/Account/fields/KimbleOne__TimePatternRule__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TimePatternRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Time Pattern Rule</label>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>