force-app/main/default/objects/Account/fields/Last_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Close_Date__c</fullName>
    <description>Shows the most recent date of an opportunity closure on this account. Populated via workflow. Used for reporting purposes.</description>
    <inlineHelpText>Shows the most recent date of an opportunity closure on this account. Populated via workflow. Used for reporting purposes.</inlineHelpText>
    <label>Last Close Date</label>
    <type>Date</type>
</CustomField>